(fix): systray alignment

--- a/linux/nixos/eww/eww.scss
+++ b/linux/nixos/eww/eww.scss
@@ -113,5 +113,6 @@ $base05: #ebdbb2;
 
   .tray {
     margin-right: 8px;
+    margin-top: 2px;
   }
 }
